refactor: moved github/workflows to root from startup

--- a/.github/ workflows/container.yaml
+++ b/.github/ workflows/container.yaml
@@ -5,11 +5,11 @@ on:
     branches:
       - master
     paths:
-      - "container/**"
+      - "startup/container/**"
 
 default:
   run:
-    working-directory: container
+    working-directory: startup/container
 
 jobs:
   build:
