--- a/.github/ workflows/container.yaml
+++ b/.github/ workflows/container.yaml
@@ -3,7 +3,7 @@ name: deploy-container
 on:
   push:
     branches:
-      - ["master"]
+      - ["master", "staging"]
     paths:
       - "startup/container/**"
 
